fix url deprecation warning